
    \item Plain SVG text can now be inserted into the image (in a
    similar manner to 'grid.element') using 'grid.textNode'. (Simon)

    \item Bugfix 'childrenOrder' is now respected for gTrees.

    \item Bugfix for colours. 0 is now valid (but transparent). (Simon)

    \item Fix for garnishing. They should now always be applied over the
    top of existing SVG attributes. (Simon)

  }
}

\section{Changes in version 1.1-0}{
  \itemize{

    \item Added options for 'vpPath' and 'gPath' separators. This allows
    for easier manipulation in JavaScript as the separators no longer
    need to be the troublesome '::' (which require escaping with CSS
    selectors). (Simon)

    \item Exporting HTML files is now optional. (Simon)

    \item Always return a named list with the output of
    'gridToSVG()'. This is invisibly returned when an SVG file is saved
    to disk. (Simon)

    \item Added 'usePaths' option for determining whether to use vpPaths
    and gPaths SVG IDs. (Simon)

    \item Added 'uniqueNames' option for generating unique names for SVG
    IDs from grob and viewport names. This further distances ourselves
    from the original grid names. (Simon)

    \item Added 'export.mappings' option for exporting name mapping
    information. This allows us to keep track of names and how they have
    been modified by gridSVG. (Simon)

    \item Added 'gridSVGMappings' function to import mapping
    information. (Simon)

    \item Added 'getSVGMappings' function to retrieve IDs generated for
    an image from a grob or a viewport name. Also exported are CSS
    selectors and XPath expressions. These can also be retrieved by
    'getSVGMappings'. (Simon)

    \item Added new generic element interface, 'grid.element'. Allows
    any arbitrary SVG element (or tree of elements) to be inserted into
    the resulting SVG image. (Simon)

    \item When using the 'grep' argument for 'grid.hyperlink' and